Fix docs TOC to not overlay on text on small screens
Fix by Jacob Davis.

Reviewed-on: http://gerrit.cloudera.org:8080/1074
Tested-by: Misty Stanley-Jones <misty@apache.org>

--- a/css/kudu.css
+++ b/css/kudu.css
@@ -12,6 +12,13 @@
   margin-top: 0;
   width: 262.5px;
 }
+
+@media (max-width: 991px) {
+  .affix {
+    position: inherit;
+  }
+}
+
 #toc {
     margin-top: 30px;
     padding: 10px;
